--- a/Editor/UnityTools.Editor.asmdef
+++ b/Editor/UnityTools.Editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "UnityTools.Editor",
+    "name": "GestaltTheory.UnityTools.Editor",
     "rootNamespace": "",
     "references": [
         "GUID:f589edd8e391bae4f8d260514e54b697"
